--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+astroid==2.1.0
+colorama==0.4.1
 Django==2.1.4
 django-crispy-forms==1.7.2
+django-model-utils==3.1.2
+djangorestframework==3.9.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+numpy==1.16.0
+pandas==0.24.0
+pylint==2.2.2
+python-dateutil==2.7.5
 pytz==2018.7
+six==1.12.0
+wrapt==1.10.11
+xlrd==1.2.0
+xlwt==1.3.0
